# lecture9-paper-digest

./: .env.example  .gitignore  D2RS第九讲-漫谈VibeCoding-以Paper Digest为例.pptx  README.md  pyproject.toml  pyzotero-usage.qmd  qwen-long.qmd  sqlite-db.qmd
docs/pyzotero/: pyzotero-tutorial.md
docs/qwen/: qwen-batch-mode.md  qwen-deep-research.md  qwen-file-manage.md  qwen-long.md  qwen-structured-output.md
paper_digest/: __init__.py  batch.py  cache.py  cli.py  db.py  llm.py  processor.py  render.py  zotero.py
ppt-workspace/: create-ppt-with-links.js  create-ppt.js
ppt-workspace/slides/: slide01.html  slide02.html  slide03.html  slide04.html  slide05-img.html  slide05.html  slide06.html  slide07.html  slide08-img.html  slide08.html  slide09-img.html  slide09.html  slide10-img.html
prompts/: default.txt  v1.txt
